all_files_updated

--- a/ring.html
+++ b/ring.html
@@ -85,7 +85,7 @@ background: yellow;
         }
    </style>
 </head>
-<body onload="dilip()">
+<body>
     <div class="center-div">
         <div class="outer-ring"></div>
         <div class="middle-ring"></div>
@@ -95,4 +95,3 @@ background: yellow;
     
 </body>
 </html>
-<script src="./index.js"></script>
